--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -23,3 +23,5 @@ jobs:
         go-version: '1.20'
     - name: Build
       run: go build -o obfs4proxy/obfs4proxy ./obfs4proxy
+    - name: Build dir tree
+      run: tree
